Endpoint classes added: BeaconTypeRepository; CommuniqueTypeRepository; FeedbackTypeRepository; LocalTypeRepository/ minor additions and bug fixes

--- a/ReachUpWebsite/registerLocal.html
+++ b/ReachUpWebsite/registerLocal.html
@@ -7,9 +7,10 @@
 	<title>ReachUp!</title>>
     <link rel="stylesheet" type="text/css" href="css/generalStyle.css">
     <link rel="stylesheet" type="text/css" href="css/registerLocalStyle.css">
-    <link rel="stylesheet" type="text/javascript" href="js/jquery-3.4.1.min.js">
-    <link rel="stylesheet" type="text/javascript" href="js/fetchLocalOptions.js">
-    <link rel="stylesheet" type="text/javascript" href="js/registerLocal.js">
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="module" src="classes/ReachUpWebAPI.js"></script>
+    <script type="module" src="js/fetchLocalOptions.js"></script>
+    <script type="module"  src="js/registerLocal.js"></script>
 </head>
 <body>
 		<header>
