--- a/ReachUpWebsite/feedbacks.html
+++ b/ReachUpWebsite/feedbacks.html
@@ -4,13 +4,16 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>ReachUp!</title>>
+	<title>ReachUp!</title>
     <link rel="stylesheet" type="text/css" href="css/generalStyle.css">
     <link rel="stylesheet" type="text/css" href="css/feedbacksStyle.css">
-    <link rel="stylesheet" type="text/javascript" href="js/jquery-3.4.1.min.js">
-    <link rel="stylesheet" type="text/javascript" href="js/fetchFeedbacks.js">
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="module" src="classes/ReachUpWebAPI.js"></script>
+    <script type="module" src="classes/FeedbackTypeRepository.js"></script>
+    <script type="module" src="classes/FeedbackRepository.js"></script>
+    <script type="module" src="js/fetchFeedbacks.js"></script>
 </head>
-<body>
+<body
 		<header>
             <figure>
                <img src="img/ReachUp.png" title="ReachUp!" alt="ReachUp!">
