--- a/ReachUpWebsite/index.html
+++ b/ReachUpWebsite/index.html
@@ -7,8 +7,9 @@
 	<title>ReachUp!</title>>
     <link rel="stylesheet" type="text/css" href="css/generalStyle.css">
     <link rel="stylesheet" type="text/css" href="css/loginStyle.css">
-    <link rel="stylesheet" type="text/javascript" href="js/jquery-3.4.1.min.js">
-    <link rel="stylesheet" type="text/javascript" href="js/fetchUser.js">
+    <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+    <script type="module" src="classes/ReachUpWebAPI.js"></script>
+    <script type="module" src="js/fetchUser.js"></script>
 </head>
 <body>
 		<header>
