Imports and exports of JS files; starting of refactoring/correting/body-additing of files; separation of classes into folders and other minor changes

--- a/ReachUpWebsite/updateLocal.html
+++ b/ReachUpWebsite/updateLocal.html
@@ -40,7 +40,7 @@
         </select>
         <p>UUID do beacon</p>
         <input type="text" required id="txtLocalBeaconUUID" class="input" name="localBeaconUUID" placeholder="Digite o UUID do beacon"></input>
-        <button id="btnRegisterLocal" value="Confirmar"></button>
+        <button id="btnUpdateLocal" value="Confirmar"></button>
     </form>
  </main>
 </body>
