Endpoint classes completed

--- a/ReachUpWebsite/feedbacks.html
+++ b/ReachUpWebsite/feedbacks.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" type="text/css" href="css/generalStyle.css">
     <link rel="stylesheet" type="text/css" href="css/feedbacksStyle.css">
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="module" src="classes/ReachUpWebAPI.js"></script>
-    <script type="module" src="classes/FeedbackTypeRepository.js"></script>
-    <script type="module" src="classes/FeedbackRepository.js"></script>
+    <script type="module" src="classes/models/ReachUpWebAPI.js"></script>
+    <script type="module" src="classes/repositories/FeedbackTypeRepository.js"></script>
+    <script type="module" src="classes/repositories/FeedbackRepository.js"></script>
+    <script type="module" src="js/fetchFeedbackTypes.js"></script>
     <script type="module" src="js/fetchFeedbacks.js"></script>
+    <script type="text/javascript" src="js/getUserToken.js"></script>
 </head>
 <body
 		<header>
