--- a/ReachUpWebsite/index.html
+++ b/ReachUpWebsite/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" type="text/css" href="css/generalStyle.css">
     <link rel="stylesheet" type="text/css" href="css/loginStyle.css">
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="module" src="classes/ReachUpWebAPI.js"></script>
+    <script type="module" src="classes/models/ReachUpWebAPI.js"></script>
+    <script type="module" src="classes/repositories/AccountRepository.js"></script>
+    <script type="module" src="classes/repositories/UserRepository.js"></script>
     <script type="module" src="js/fetchUser.js"></script>
+    <script type="text/javascript" src="js/getUserToken.js"></script>
 </head>
 <body>
 		<header>
