--- a/ReachUpWebsite/updateLocal.html
+++ b/ReachUpWebsite/updateLocal.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" type="text/css" href="css/generalStyle.css">
     <link rel="stylesheet" type="text/css" href="css/updateLocalStyle.css">
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-    <script type="module" src="classes/ReachUpWebAPI.js"></script>
+    <script type="module" src="classes/models/ReachUpWebAPI.js"></script>
+    <script type="module" src="classes/repositories/LocalOptionsRepository.js"></script>
+    <script type="module" src="classes/repositories/LocalRepository.js"></script>
     <script type="module" src="js/updateLocal.js"></script>
+    <script type="text/javascript" src="js/getUserToken.js"></script>
 </head>
 <body>
 		<header>
@@ -32,7 +35,7 @@
             <option>Banheiro</option>
         </select>
         <p>Andar do local</p>
-        <select>
+        <select id = "localFloor">
             <option>1</option>
             <option>2</option>
             <option>3</option>
