--- a/MapMaker/index.html
+++ b/MapMaker/index.html
@@ -13,7 +13,7 @@
     </label>
     <label>
     <span>Current Floor</span>
-        <input  id="uuid" type="number" value="0"  width="20px">
+        <input  id="floor" type="number" value="0"  width="20px">
     </label>
     <section id="right-painel">
         <button class="mapBtn" id="addRoute">Add hall</button></br></br>
