--- a/MapMaker/index.html
+++ b/MapMaker/index.html
@@ -21,6 +21,7 @@
         <button class="mapBtn" id="addBeacon">Add beacon</button></br></br>
         <button class="mapBtn" id="addTriBeacon">Add tri-beacon</button></br></br>
         <button class="mapBtn" id="clear">Clear</button>
+        <button class="mapBtn" id="showMap" disabled>Show map</button>
    
         <br/>
     </section>
