MapMaker re-added (with small changes).

--- a/MapMaker/index.html
+++ b/MapMaker/index.html
@@ -20,7 +20,9 @@
          <button class="mapBtn" id="addLocal">Add local</button></br></br>
         <button class="mapBtn" id="addBeacon">Add beacon</button></br></br>
         <button class="mapBtn" id="addTriBeacon">Add tri-beacon</button></br></br>
+        <button class="mapBtn" id="addAll">Add all</button></br></br>
         <button class="mapBtn" id="clear">Clear</button>
+        <button class="mapBtn" id="clearSquare">Clear square</button>
         <button class="mapBtn" id="showMap" disabled>Show map</button>
    
         <br/>
