Map render with dynamic size fixed, and other improvements started

--- a/MapMaker/index.html
+++ b/MapMaker/index.html
@@ -15,6 +15,10 @@
     <span>Current Floor</span>
         <input  id="floor" type="number" value="0"  width="20px">
     </label>
+    <label>
+        <span>Width Units</span>
+            <input  id="widthUnits" type="number" value="0"  width="20px">
+        </label>
     <section id="right-painel">
         <button class="mapBtn" id="addRoute">Add hall</button></br></br>
         <button class="mapBtn" id="addLocal">Add local</button></br></br>
