--- a/MapMaker/index.html
+++ b/MapMaker/index.html
@@ -69,8 +69,10 @@
 
     
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/MapMakerScripts/routines.script.js"></script>
-    <script src="js/MapMakerScripts/main.script.js"></script>
-    <script src="js/MapMakerScripts/events.script.js"></script>
+    <script type="module" src="ApiConnection.ts"></script>
+    <script type="module" src="js/MallPlanController.ts"></script>
+    <script type="module" src="js/MapMakerScripts/routines.script.js"></script>
+    <script type="module" src="js/MapMakerScripts/main.script.js"></script>
+    <script type="module" src="js/MapMakerScripts/events.script.js"></script>
 </body>
 </html>
