--- a/MapMaker/public/map.html
+++ b/MapMaker/public/map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/MapMaker.style.css">
+    <link rel="stylesheet" href="../src/style/MapMaker.style.css">
     <title>MapMaker</title>
 </head>
 <body>
@@ -69,11 +69,11 @@
 
 
     
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script type="module" src="ApiConnection.ts"></script>
-    <script type="module" src="js/MallPlanController.ts"></script>
-    <script type="module" src="js/UserTokenController.ts"></script>
-    <script type="module" src="js/MapMakerScripts/routines.script.js"></script>
-    <script type="module" src="js/MapMakerScripts/events.script.js"></script>
+    <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
+    <script type="module" src="../src/services/ApiConnection.ts"></script>
+    <script type="module" src="../src/Models/MallPlan.ts"></script>
+    <script type="module" src="../src/Controllers/AccountController.js"></script>
+    <script type="module" src="../src/Scripts/routines.script.js"></script>
+    <script type="module" src="../src/Scripts/events.script.js"></script>
 </body>
 </html>
