--- a/MapMaker/public/index.html
+++ b/MapMaker/public/index.html
@@ -72,12 +72,12 @@
     <section id="mapContainer"></section>
     <br/>
 
-
     <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
-    <script type="module" src="../src/services/ApiConnection.ts"></script>
-    <script type="module" src="../src/Models/MallPlan.ts"></script>
-    <script type="module" src="../src/Controllers/AccountController.ts"></script>
-    <script type="module" src="../src/Scripts/routines.script.js"></script>
-    <script type="module" src="../src/Scripts/events.script.js"></script>
+    <script src="../build/main.bundle.js"></script>
+    <script type="script" src="../src/services/ApiConnection.ts"></script>
+    <script type="script" src="../src/Models/MallPlan.ts"></script>
+    <script type="script" src="../src/Controllers/AccountController.ts"></script>
+    <script type="script" src="../src/Scripts/routines.script.js"></script>
+    <script type="script" src="../src/Scripts/events.script.js"></script>
 </body>
 </html>
