Visual improvements added

--- a/MapMaker/public/index.html
+++ b/MapMaker/public/index.html
@@ -10,7 +10,7 @@
    
 
 
-    <section id="right-painel" style="position: fixed; background-color: white;bottom: 0px;width: 100%;">
+    <section id="right-painel" style="position: fixed; background-color:black;bottom: 0px;width: 100%;">
         <label>
             <span>UUID</span>
             <input  id="uuid" type="text" >
@@ -27,6 +27,8 @@
         </label>
 
         <label>
+            <br/>
+            <br/>
         <span>Plan</span>
              <input  id="plan" type="file" value="0"  width="20px">
          </label>
@@ -55,12 +57,14 @@
     
             </div>
             <br/>
+        <div style="background-color: #000000;">
         <button class="mapBtn" id="addRoute">Add hall</button>
         <button class="mapBtn" id="addLocal">Add local</button>
         <button class="mapBtn" id="addAll">Add all</button>
         <button class="mapBtn" id="clear">Clear</button>
         <button class="mapBtn" id="clearSquare">Clear square</button>
         <button class="mapBtn" id="showMap" disabled>Show map</button>
+        </div>
    
         <br/>
 
