--- a/MapMaker/public/index.html
+++ b/MapMaker/public/index.html
@@ -7,7 +7,15 @@
     <title>MapMaker</title>
 </head>
 <body>
+   <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
+   <script type="script" src="../src/services/FacebookApi.js"></script>
+   <script async defer crossorigin="anonymous" 
+   src="https://connect.facebook.net/pt_BR/sdk.js"></script>
    
+   <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+   </fb:login-button>
+
+   <div id="status"></div>
 
 
     <section id="right-painel" style="position: fixed; background-color:black;bottom: 0px;width: 100%;">
@@ -76,8 +84,7 @@
 
     <section id="mapContainer"></section>
     <br/>
-
-    <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
+    
     <script src="../build/main.bundle.js"></script>
     <script type="module" src="../src/services/ApiConnection.ts"></script>
     <script type="module" src="../src/Models/MallPlan.ts"></script>
