--- a/MapMaker/public/index.html
+++ b/MapMaker/public/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="14900610881-8re4ccif04vqcc87hlpppbso6bhs3n3u.apps.googleusercontent.com.apps.googleusercontent.com">
     <link rel="stylesheet" href="../src/style/MapMaker.style.css">
     <title>MapMaker</title>
 </head>
 <body>
    <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
+   <script src="https://apis.google.com/js/platform.js" async defer></script>
    <script type="script" src="../src/services/FacebookApi.js"></script>
    <script async defer crossorigin="anonymous" 
    src="https://connect.facebook.net/pt_BR/sdk.js"></script>
    
+   <div class="g-signin2" data-onsuccess="onSignIn"></div>
    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
    </fb:login-button>
 
@@ -84,7 +87,7 @@
 
     <section id="mapContainer"></section>
     <br/>
-    
+
     <script src="../build/main.bundle.js"></script>
     <script type="module" src="../src/services/ApiConnection.ts"></script>
     <script type="module" src="../src/Models/MallPlan.ts"></script>
