--- a/MapMaker/public/index.html
+++ b/MapMaker/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="google-signin-client_id" content="14900610881-8re4ccif04vqcc87hlpppbso6bhs3n3u.apps.googleusercontent.com.apps.googleusercontent.com">
     <link rel="stylesheet" href="../src/style/MapMaker.style.css">
+    <link rel="stylesheet" href="../src/style/style.css">
     <title>MapMaker</title>
 </head>
 <body>
@@ -31,6 +32,15 @@
         background-size: cover;
     }
    </style>
+
+<div class="container" id="guestContainer">
+    <div class="row vertical-center-row">
+        <div class="container">
+            <main role="main" class="pb-3">
+            </main>
+        </div>
+    </div>
+</div>
 
    <div id="logreg-forms">
 
