Updating Database, LibraryClasses, WebAPI and WebDev

--- a/WebDev/public/beacons.html
+++ b/WebDev/public/beacons.html
@@ -59,7 +59,7 @@
       <div class="sidebar-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link" href="boss.html">
               <!--<span class="nav-icon" data-feather="home"></span>
               Home <span class="sr-only">(current)</span>-->
               <span class="fas fa-home"></span>
@@ -81,14 +81,14 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="beacons.html">
+            <a class="nav-link active" href="#">
               <!--<span class="nav-icon" data-feather="layers"></span>-->
               <span class="fab fa-bluetooth"></span>
               Beacons
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="rating.html">
               <!--<span class="nav-icon" data-feather="bar-chart-2"></span>-->
               <span class="fas fa-star"></span>
               Avaliações
