--- a/WebDev/public/rating.html
+++ b/WebDev/public/rating.html
@@ -59,7 +59,7 @@
       <div class="sidebar-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link" href="index.html">
               <!--<span class="nav-icon" data-feather="home"></span>
               Home <span class="sr-only">(current)</span>-->
               <span class="fas fa-home"></span>
@@ -88,7 +88,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link active" href="#">
               <!--<span class="nav-icon" data-feather="bar-chart-2"></span>-->
               <span class="fas fa-star"></span>
               Avaliações
