--- a/WebDev/public/boss.html
+++ b/WebDev/public/boss.html
@@ -88,7 +88,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="rating.html">
               <!--<span class="nav-icon" data-feather="bar-chart-2"></span>-->
               <span class="fas fa-star"></span>
               Avaliações
