--- a/WebDev/public/config.html
+++ b/WebDev/public/config.html
@@ -59,7 +59,7 @@
       <div class="sidebar-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" href="#">
+            <a class="nav-link" href="boss.html">
               <!--<span class="nav-icon" data-feather="home"></span>
               Home <span class="sr-only">(current)</span>-->
               <span class="fas fa-home"></span>
@@ -88,7 +88,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="rating.html">
               <!--<span class="nav-icon" data-feather="bar-chart-2"></span>-->
               <span class="fas fa-star"></span>
               Avaliações
@@ -102,7 +102,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="config.html">
+            <a class="nav-link active" href="#">
               <!--<span class="nav-icon" data-feather="settings"></span>-->
               <span class="fas fa-cog"></span>
               Configurações
