--- a/WebDev/public/soul.html
+++ b/WebDev/public/soul.html
@@ -2,16 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../src/style/MapMaker.style.css">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link href="../src/style/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Open+Sans&family=PT+Sans&family=PT+Sans+Narrow&display=swap" rel="stylesheet">
     <title>ReachUp! Dev - MapMaker</title>
+
+    <style>
+        .bd-placeholder-img {
+          font-size: 1.125rem;
+          text-anchor: middle;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          user-select: none;
+        }
+  
+        @media (min-width: 768px) {
+          .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+          }
+        }
+      </style>
+      <!-- Custom styles for this template -->
+    <link href="../src/style/dashboard.css" rel="stylesheet">
 </head>
 <body>
    <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
    <script src="../src/Scripts/bootstrap.min.js"></script>
+
+   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+    <a href="boss.html"><section class="logo"></section></a>
+<a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" style="background-color:#343a40;font-family: 'PT Sans', sans-serif;font-size: 18px;"   href="boss.html">ReachUp! Dev</a>
+<button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+<ul class="navbar-nav px-3">
+  <!--<li class="nav-item text-nowrap">
+        <a class="nav-link" href="index.html">Voltar</a>
+  </li>-->
+  <li class="nav-item text-nowrap">
+    <a class="nav-link" href="index.html">Sair</a>
+  </li>
+</ul>
+</nav>
 
    <input id="copyToClipBoard" type="text" hidden>
    <section id="top-painel">
