--- a/WebDev/public/Alerta.html
+++ b/WebDev/public/Alerta.html
@@ -5,14 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/Style.css">
-  <link rel="stylesheet" href="css/StyleIndex.css">
 	<title>ReachUp</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -34,51 +33,6 @@
     </ul>
   </div>
 </nav>
-
-<h3>Easter egg do ReachUp <3</h3>
-<hr>
-
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Alerta</h5>
-        <p class="card-text">Vômito no piso 2.</p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Configurações</h5>
-        <p class="card-text">Beacon 'McDonalds' desativado recentemente.</p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Feedback</h5>
-        <p class="card-text">Pedro Ian: "Esses corredores estão muito cheirosos, adoro isso!".<br>Guilherme Pereira: "Qual o sentido do shopping?".</p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Perfil</h5>
-        <p class="card-text">ID: Robson Galhego Pires.<br>Tempo online: 16h02min.</p>
-        <a href="#" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
-</div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
