--- a/WebDev/public/confirmPasswordRecovery.html
+++ b/WebDev/public/confirmPasswordRecovery.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="../src/style/StyleIndex.css">
 	<title>ReachUp! Dev</title>
-	<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -15,11 +15,9 @@
 
 <div class="login-page">
   <div class="form">
-    <img src="assets/images/ReachUpLogo.jpg" class="logo" alt="ReachUp" width="120" height="120">
-      <input id="txtEmail" type="text" placeholder="Login"/>
-      <input id="txtPassword" type="password" placeholder="Senha"/>
-      <button id="btnLogin">login</button>
-      <p class="message">Não lembra sua senha? <a href="recoverPassword.html">Clique aqui.</a></p>
+    <img src="../public/assets/images/ReachUpLogo.jpg" class="logo" alt="ReachUp" width="120" height="120">
+      <p>Um link para alterar sua senha foi enviado no seu email.</p>
+      <a href="index.html"><button>voltar</button></a>
   </div>
 </div>
 </div>
