--- a/WebDev/public/updatePassword.html
+++ b/WebDev/public/updatePassword.html
@@ -6,20 +6,24 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="../src/style/StyleIndex.css">
 	<title>ReachUp! Dev</title>
-	<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-</head>
+	<link rel="shortcut icon" href="../public/assets/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="../public/assets/favicon.ico" type="image/x-icon">
+</head>;
 <body>
 
 <div class="container-sm">
 
 <div class="login-page">
   <div class="form">
-    <img src="assets/images/ReachUpLogo.jpg" class="logo" alt="ReachUp" width="120" height="120">
-      <input id="txtEmail" type="text" placeholder="Login"/>
-      <input id="txtPassword" type="password" placeholder="Senha"/>
-      <button id="btnLogin">login</button>
-      <p class="message">Não lembra sua senha? <a href="recoverPassword.html">Clique aqui.</a></p>
+    <img src="../public/assets/images/ReachUpLogo.jpg" class="logo" alt="ReachUp" width="120" height="120">
+      <p>Digite seu email</p>
+      <input id='txtEmail' type="text" placeholder="Email"/>
+      <p>Digite seu código de verificação</p>
+      <input id='txtCode' type="text" placeholder="Código de verificação"/>
+      <button id='btnTryUpdatePassword'>enviar</button>
+      <p>Digite sua nova senha</p>
+      <input id='txtNewPassword' type="text" placeholder="Escolha sua nova senha"/>
+      <button id='btnUpdatePassword'>Salvar</button>
   </div>
 </div>
 </div>
@@ -28,6 +32,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
 <script src="../src/Scripts/login.js"></script>
+<script src="../src/Scripts/recoverPassword.js"></script>
 <script src="../src/Models/Account.js"></script>
 <script src="../src/Controllers/AccountController.js"></script>
 <script src="../src/services/ApiConnection.js"></script>
