--- a/WebDev/public/updatePassword.html
+++ b/WebDev/public/updatePassword.html
@@ -8,23 +8,25 @@
 	<title>ReachUp! Dev</title>
 	<link rel="shortcut icon" href="../public/assets/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="../public/assets/favicon.ico" type="image/x-icon">
-</head>;
+</head>
 <body>
 
 <div class="container-sm">
 
 <div class="login-page">
-  <div class="form">
+  
+    <form class="form">
     <img src="../public/assets/images/ReachUpLogo.jpg" class="logo" alt="ReachUp" width="120" height="120">
       <p>Digite seu email</p>
       <input id='txtEmail' type="text" placeholder="Email"/>
       <p>Digite seu código de verificação</p>
       <input id='txtCode' type="text" placeholder="Código de verificação"/>
-      <button id='btnTryUpdatePassword'>enviar</button>
+      <button id="btnTryUpdatePassword" disabled>enviar</button><br><br>
       <p>Digite sua nova senha</p>
       <input id='txtNewPassword' type="text" placeholder="Escolha sua nova senha"/>
-      <button id='btnUpdatePassword'>Salvar</button>
-  </div>
+      <button id="btnUpdatePassword" disabled>Salvar</button>
+    </form>
+  
 </div>
 </div>
 
