Local register working

--- a/WebDev/public/addLocal.html
+++ b/WebDev/public/addLocal.html
@@ -190,8 +190,14 @@
 
    <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
    <script src="../src/Scripts/bootstrap.min.js"></script>
-   <script src="../build/main.bundle.js"></script>
-   <script type="module" src="../src/Scripts/localType.js"></script>
-   <script type="module" src="../src/Scripts/addLocal.js"></script>
+   <script src="../src/Scripts/given.js"></script>
+   <script src="../src/Scripts/addLocal.js"></script>
+   <script src="../src/Scripts/localType.js"></script>
+   <script src="../src/Models/LocalType.js"></script>
+   <script src="../src/Models/Local.js"></script>
+   <script src="../src/Controllers/LocalController.js"></script>
+   <script src="../src/Controllers/LocalTypeController.js"></script>
+   <script src="../src/services/ApiConnection.js"></script>
+   <script src="../src/services/ApiConfig.js"></script>
     </body>
 </html>
