--- a/WebAdmin/public/Menu.html
+++ b/WebAdmin/public/Menu.html
@@ -42,7 +42,7 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Alerta</h5>
+        <h5 class="card-title">Comunicados</h5>
         <p class="card-text">Vômito no piso 2.</p>
         <a href="#" class="btn btn-primary">Ver Mais</a>
       </div>
