--- a/WebAdmin/public/Alerta.html
+++ b/WebAdmin/public/Alerta.html
@@ -38,7 +38,34 @@
 <h3>Easter egg do ReachUp <3</h3>
 <hr>
 
+<a class="btn btn-primary" href="CriarComunicado.html" id="centro" role="button">Criar</a>
 
+<br>
+<br>
+
+<div class="list-group" id="descola">
+  <a href="#" class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Beacon: Netshoes</h5>
+    </div>
+    <p class="mb-1">Acidente na prateleira das chuteiras.</p>
+    <small>Alerta ativo</small>
+  </a>
+  <a href="#" class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Beacon: Corredor sul</h5>
+    </div>
+    <p class="mb-1">Vômito perto do quiosque 04.</p>
+    <small class="text-muted">Alerta ativo</small>
+  </a>
+  <a href="#" class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Beacon: Americanas</h5>
+    </div>
+    <p class="mb-1">Black friday! 50% de desconto em todos eletrodomésticos.</p>
+    <small class="text-muted">Alerta desativo</small>
+  </a>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
