--- a/WebAdmin/public/CriarComunicado.html
+++ b/WebAdmin/public/CriarComunicado.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/Style.css">
-  <link rel="stylesheet" type="text/css" href="css/StyleIndex.css">
-	<title>ReachUp</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="css/StyleIndex.css">
+  <title>ReachUp</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -38,12 +38,16 @@
 <h3>Easter egg do ReachUp <3</h3>
 <hr>
 
-<form class="form-inline my-2 my-lg-0" id="descola">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button type="button" class="btn btn-light">Pesquisar</button>
-    </form>
-<br>
-<div class="form-check form-check-inline" id="descola">
+ <div class="form-group" id="descola">
+    <label for="exampleFormControlSelect1">Selecione o beacon</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>Netshoes</option>
+      <option>McDonalds</option>
+      <option>Americanas</option>
+    </select>
+  </div>
+
+<div class="form-check form-check-inline" id="centro2">
   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
   <label class="form-check-label" for="inlineRadio1">Ativo</label>
 </div>
@@ -51,32 +55,14 @@
   <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
   <label class="form-check-label" for="inlineRadio2">Desativo</label>
 </div>
+
+<div class="form-group" id="descola">
+    <label for="exampleFormControlTextarea1">Comunicado</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
 <br>
-
-<div class="list-group" id="descola">
-  <a href="#" class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Netshoes</h5>
-    </div>
-    <p class="mb-1">Id do beacon: 1msOaiXJMtjgRnbiZWiEXA</p>
-    <small>Beacon ativo</small>
-  </a>
-  <a href="#" class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">McDonalds</h5>
-    </div>
-    <p class="mb-1">Id do beacon: wAUlIMrEFY8DXmIDRt_s-A</p>
-    <small class="text-muted">Beacon desativo</small>
-  </a>
-  <a href="#" class="list-group-item list-group-item-action">
-    <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Americanas</h5>
-    </div>
-    <p class="mb-1">Id do beacon: AmEvfbxBQIrXSDAjSA4X36</p>
-    <small class="text-muted">Beacon ativo</small>
-  </a>
-</div>
-
+  <input class="btn btn-primary" id="centro3" type="submit" value="Submit">
+<input class="btn btn-primary" id="branco" type="reset" value="Reset">
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
