WebAdmin design finished

--- a/WebAdmin/public/Feedback.html
+++ b/WebAdmin/public/Feedback.html
@@ -46,49 +46,41 @@
 <div class="list-group" id="saidae5">
   <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Netshoes</h5>
+      <h5 class="mb-1">Robson</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 81194</p>
-    <small>Local ativo</small>
-    <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <p class="mb-1">Muito boa a preçisão da localização indoor, queria ir pro elevador e fui parar no estacionamento!!</p>
+    <small>Feedback Negativo</small>
   </div>
   <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">McDonalds</h5>
+      <h5 class="mb-1">Filipe</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 22194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <p class="mb-1">Achei o aplicativo simplesmente muito bom, realmente guia nós, deficientes visuais.</p>
+    <small class="text-muted">Feedback Positivo</small>
   </div>
    <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Subway</h5>
+      <h5 class="mb-1">Marcos</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 69194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <p class="mb-1">Achei o sistema bom.</p>
+    <small class="text-muted">Feedback Positivo</small>
   </div>
    <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Saraiva</h5>
+      <h5 class="mb-1">Dagoberto</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 51194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <p class="mb-1">Nao. Consegui. Chegar. No. Lugar , Esta. Com. Deifeito.</p>
+    <small class="text-muted">Feedback Negativo</small>
   </div>
   <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Americanas</h5>
+      <h5 class="mb-1">Amélia</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 63194</p>
-    <small class="text-muted">Local ativo</small>
-    <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <p class="mb-1">Complicado demais.</p>
+    <small class="text-muted">Feedback Negativo</small>
   </div>
   </div>
 </div>
-
-
-
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
