--- a/WebAdmin/public/EditarLocais.html
+++ b/WebAdmin/public/EditarLocais.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/Style.css">
   <link rel="stylesheet" href="css/StyleIndex.css">
-	<title>ReachUp</title>
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+  <title>ReachUp</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 
@@ -34,28 +34,40 @@
 
 <h3>Easter egg do ReachUp <3</h3>
 <hr>
+<div id="branco">
 
-<div class="row" id="saidae4">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Feedback</h5>
-        <p class="card-text">Guilherme Djrdjrjan: Vômito no piso 2.</p>
-        <a href="Feedback.html" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
+<div class="form-group">
+    <label for="exampleFormControlSelect1">Local Selecionado: </label>
+    <input type="text" class="form-control" id="exampleFormControlSelect1" disabled="true" placeholder="Subway">
+    </select>
   </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Locais</h5>
-        <p class="card-text">'McDonalds' desativado recentemente.</p>
-        <a href="Locais.html" class="btn btn-primary">Ver Mais</a>
-      </div>
-    </div>
-  </div>
+
+<br>
+
+<div class="btn-group btn-group-toggle" data-toggle="buttons">
+  <label class="btn btn-primary active">
+    <input type="radio" name="options" id="option1" checked> Vinculado
+  </label>
+  <label class="btn btn-primary">
+    <input type="radio" name="options" id="option3"> Desvinculado
+  </label>
 </div>
 
+<div class="form-group">
+  <br>
+    <label for="exampleFormControlSelect1">Alterar a Box:</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>Box 63194</option>
+      <option>Box 22194</option>
+      <option>Box 81194</option>
+      <option>Box 69194</option>
+      <option>Box 51194</option>
+    </select>
+  </div>
+
+  <input class="btn btn-primary" type="submit" value="Salvar Alterações" id="saidae">
+
+</div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
