Feedbacks page working

--- a/WebAdmin/public/Categorias.html
+++ b/WebAdmin/public/Categorias.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-black rounded">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -40,8 +40,7 @@
   </div>
 </nav>
 
-<h4>Easter egg do ReachUp <3</h4>
-<h6>Easter egg do ReachUp <3</h6>
+<h3>Easter egg do ReachUp <3</h3>
 <hr>
 
 
@@ -51,45 +50,41 @@
     </form>
 
 <div class="list-group" id="saidae5">
+  
   <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Netshoes</h5>
+      <h5 class="mb-1">Acessórios</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 81194</p>
-    <small>Local ativo</small>
-    <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <small class="text-muted">Correntes, Pulseiras, Meias, Brincos....</small>
+      <div class="icone"><a href="EditarCategorias.html"><i class="fas fa-cog fa-2x"></i></a></div>
   </div>
   <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">McDonalds</h5>
+      <h5 class="mb-1">Alimentos</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 22194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <small>Frutas, Refrigerantes, Sucos, Salgados....</small>
+    <div class="icone"><a href="EditarCategorias.html"><i class="fas fa-cog fa-2x"></i></a></div>
   </div>
    <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Subway</h5>
+      <h5 class="mb-1">Construção</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 69194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <small class="text-muted">Pias, Banheiras, Lampadas, Tintas....</small>
+      <div class="icone"><a href="EditarCategorias.html"><i class="fas fa-cog fa-2x"></i></a></div>
   </div>
    <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Saraiva</h5>
+      <h5 class="mb-1">Literatura</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 51194</p>
-    <small class="text-muted">Local desativo</small>
-      <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <small class="text-muted">Livros, Revistas, Quadrinhos, Material Escolar....</small>
+      <div class="icone"><a href="EditarCategorias.html"><i class="fas fa-cog fa-2x"></i></a></div>
   </div>
   <div class="list-group-item list-group-item-action">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">Americanas</h5>
+      <h5 class="mb-1">Roupas</h5>
     </div>
-    <p class="mb-1">Vinculado à: Box 63194</p>
-    <small class="text-muted">Local ativo</small>
-    <div class="icone"><a href="EditarLocais.html"><i class="fas fa-cog fa-2x"></i></a></div>
+    <small class="text-muted">Camisas, Blusas, Calças, Shorts....</small>
+    <div class="icone"><a href="EditarCategorias.html"><i class="fas fa-cog fa-2x"></i></a></div>
   </div>
   </div>
 </div>
