--- a/WebAdmin/public/CriarLojistas.html
+++ b/WebAdmin/public/CriarLojistas.html
@@ -41,49 +41,40 @@
 <h4>Easter egg do ReachUp <3</h4>
 <h6>Easter egg do ReachUp <3</h6>
 <hr>
-<div id="branco">
 
-<div class="form-group">
-    <label for="exampleFormControlSelect1">Nome Local: </label>
-    <input type="text" class="form-control" id="exampleFormControlSelect1" required/>
+<div id="branco">
+ <div class="form-group">
+    <label for="exampleFormControlSelect1">Nome do Logista: </label>
+    <input type="text" class="form-control" id="exampleFormControlSelect1" disabled="true" placeholder="Adagoberto dos Santos">
+    </select>
+  </div>
+
+ <div class="form-group">
+    <label for="exampleFormControlSelect1">Editar Senha: </label>
+    <input type="password" class="form-control" id="exampleFormControlSelect1">
+    </select>
+  </div>
+
+ <div class="form-group">
+    <label for="exampleFormControlSelect1">Confirmar Senha: </label>
+    <input type="password" class="form-control" id="exampleFormControlSelect1">
     </select>
   </div>
 
 <div class="form-group">
-  <br>
-    <label for="exampleFormControlSelect1">Andar Selecionado:</label>
+    <label for="exampleFormControlSelect1">Associe a uma loja:</label>
     <select class="form-control" id="exampleFormControlSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
+      <option>Netshoes</option>
+      <option>McDonalds</option>
+      <option>Subway</option>
+      <option>Saraiva</option>
+      <option>Americanas</option>
     </select>
   </div>
 
 <br>
 
-<div class="btn-group btn-group-toggle" data-toggle="buttons">
-  <label class="btn btn-primary active">
-    <input type="radio" name="options" id="option1" checked> Vinculado
-  </label>
-  <label class="btn btn-primary">
-    <input type="radio" name="options" id="option3"> Desvinculado
-  </label>
-</div>
-
-<div class="form-group">
-  <br>
-    <label for="exampleFormControlSelect1">Alterar a Box:</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>Box 63194</option>
-      <option>Box 22194</option>
-      <option>Box 81194</option>
-      <option>Box 69194</option>
-      <option>Box 51194</option>
-    </select>
-  </div>
-
-  <input class="btn btn-primary" type="submit" value="Salvar Alterações" id="saidae">
+  <input class="btn btn-primary" type="submit" value="Criar Logista" id="saidae">
 
 </div>
 
