--- a/WebAdmin/public/EditarCategorias.html
+++ b/WebAdmin/public/EditarCategorias.html
@@ -31,7 +31,7 @@
       <li class="nav-item">
         <a class="nav-link" href="Perfil.html" tabindex="-1" >Perfil</a>
       </li>
-            <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="Categorias.html" tabindex="-1" >Categorias</a>
       </li>
     </ul>
@@ -44,46 +44,26 @@
 <div id="branco">
 
 <div class="form-group">
-    <label for="exampleFormControlSelect1">Nome Local: </label>
-    <input type="text" class="form-control" id="exampleFormControlSelect1" required/>
+    <label for="exampleFormControlSelect1">Categoria Selecionada: </label>
+    <input type="text" class="form-control" id="exampleFormControlSelect1" placeholder="Alimentos">
     </select>
   </div>
-
-<div class="form-group">
-  <br>
-    <label for="exampleFormControlSelect1">Andar Selecionado:</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-    </select>
-  </div>
-
 <br>
 
-<div class="btn-group btn-group-toggle" data-toggle="buttons">
-  <label class="btn btn-primary active">
-    <input type="radio" name="options" id="option1" checked> Vinculado
-  </label>
-  <label class="btn btn-primary">
-    <input type="radio" name="options" id="option3"> Desvinculado
-  </label>
-</div>
 
-<div class="form-group">
-  <br>
-    <label for="exampleFormControlSelect1">Alterar a Box:</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>Box 63194</option>
-      <option>Box 22194</option>
-      <option>Box 81194</option>
-      <option>Box 69194</option>
-      <option>Box 51194</option>
-    </select>
-  </div>
+    <div class="list-group">
+       <label>Sub Categorias</label>
+      <nav id="nav2"><ul>
+        <button type="button" class="list-group-item list-group-item-action">Frutas</button>
+        <button type="button" class="list-group-item list-group-item-action">Refrigerantes</button>
+        <button type="button" class="list-group-item list-group-item-action">Salgadinhos</button>
+      </nav></ul>
+    </div><br>
 
-  <input class="btn btn-primary" type="submit" value="Salvar Alterações" id="saidae">
+
+<center><button name="btnAdicionar" type="button" class="btn btn-primary">Adicionar Sub-Categoria</button>
+<button type="button" class="btn btn-primary">Remover Sub-Categoria</button></center><br>
+<button type="button" class="btn btn-primary" id="saidae">Salvar Alterações</button>
 
 </div>
 
