--- a/WebAdmin/public/Lojistas.html
+++ b/WebAdmin/public/Lojistas.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/Style.css">
   <link rel="stylesheet" type="text/css" href="css/StyleIndex.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>ReachUp</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -36,42 +35,65 @@
       </li>
             <li class="nav-item">
         <a class="nav-link" href="Categorias.html" tabindex="-1" >Categorias</a>
-      </li>.
+      </li>
     </ul>
   </div>
-
 </nav>
 
 <h4>Easter egg do ReachUp <3</h4>
 <h6>Easter egg do ReachUp <3</h6>
 <hr>
 
-<form class="form-inline my-2 my-lg-0" id="saidae5">
-      <input id="txtClientEmail" class="form-control mr-sm-2" id="barra" type="search" placeholder="Pesquisar por usuários" aria-label="Search">
-      <button id="btnSearchByUser" type="button" id="btnResponsa" class="btn btn-primary">Pesquisar</button>
-      <div class="form-group" id="ajuste2">
-          <select id="cmbFeedbackType" class="form-control my-2 my-lg-0" id="ajuste3">
-         </select>
-      </div>
-      <strong><p class="mb-1" id="ajuste4">Período:</p></strong>
-      <input id="txtStartDate" placeholder="Data Inicial:" class="form-control mr-sm-2"  id="ajuste2" type='date' id="date"><strong><p class="mb-1" id="ajuste5">--</p></strong>
-      <input id="txtEndDate" placeholder="Data Final:" class="form-control mr-sm-2" type="date" id="ajuste2">
-</form>
 
-<div id="feedbacks" class="list-group" id="saidae5">
+<form class="form-inline my-2 my-lg-0" id="saidae5">
+      <input class="form-control mr-sm-2" id="barra" type="search" placeholder="Pesquise Por Cliente" aria-label="Search">
+      <button type="button" id="btnResponsa" class="btn btn-primary">Pesquisar</button>
+    </form>
+
+<div class="list-group" id="saidae5">
+  <div class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Pedro Ian</h5>
+    </div>
+    <p class="mb-1">Vinculado à: Netshoes</p>
+    <div class="icone"><a href="CriarLojistas.html"><i class="fas fa-cog fa-2x"></i></a></div>
+  </div>
+  <div class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Gabriel Santana</h5>
+    </div>
+    <p class="mb-1">Vinculado à: McDonalds</p>
+      <div class="icone"><a href="CriarLojistas.html"><i class="fas fa-cog fa-2x"></i></a></div>
+  </div>
+   <div class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Guilherme Djrdjrjan</h5>
+    </div>
+    <p class="mb-1">Vinculado à: Subway</p>
+      <div class="icone"><a href="CriarLojistas.html"><i class="fas fa-cog fa-2x"></i></a></div>
+  </div>
+   <div class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">David Zongoli</h5>
+    </div>
+    <p class="mb-1">Vinculado à: Saraiva</p>
+      <div class="icone"><a href="CriarLojistas.html"><i class="fas fa-cog fa-2x"></i></a></div>
+  </div>
+  <div class="list-group-item list-group-item-action">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Zario Travezz</h5>
+    </div>
+    <p class="mb-1">Vinculado à: Americanas</p>
+    <div class="icone"><a href="CriarLojistas.html"><i class="fas fa-cog fa-2x"></i></a></div>
+  </div>
+  </div>
 </div>
 
-<script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
-<script src="../src/Scripts/jquery-3.5.1.min.js"></script>
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script src="../src/Scripts/feedbacks.js"></script>
-<script src="../src/Scripts/feedbackType.js"></script>
-<script src="../src/Controllers/FeedbackController.js"></script>
-<script src="../src/Controllers/FeedbackTypeController.js"></script>
-<script src="../src/Models/Feedback.js"></script>
-<script src="../src/Models/FeedbackType.js"></script>
-<script src="../src/Services/ApiConfig.js"></script>
-<script src="../src/Services/ApiConnection.js"></script>
 
 </body>
 </html>
