--- a/WebAdmin/public/Menu.html
+++ b/WebAdmin/public/Menu.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-black rounded">
   <a class="navbar-brand" href="Menu.html"><img src="img/ReachUpLogo.jpg" width="30" height="30" class="d-inline-block align-top"> ReachUp</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,23 @@
         <a class="nav-link" href="Locais.html" tabindex="-1" >Locais</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="Lojistas.html" tabindex="-1" >Lojistas</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="Feedback.html" tabindex="-1" >Feedback</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="Perfil.html" tabindex="-1" >Perfil</a>
       </li>
+            <li class="nav-item">
+        <a class="nav-link" href="Categorias.html" tabindex="-1" >Categorias</a>
+      </li>
     </ul>
   </div>
 </nav>
 
-<h3>Easter egg do ReachUp <3</h3>
+<h4>Easter egg do ReachUp <3</h4>
+<h6>Easter egg do ReachUp <3</h6>
 <hr>
 
 <div class="row" id="saidae4">
