Updating WebAdmin and WebDev

--- a/WebAdmin/public/EditarLocais.html
+++ b/WebAdmin/public/EditarLocais.html
@@ -50,7 +50,6 @@
   </div>
 
 <div class="form-group">
-  <br>
     <label for="exampleFormControlSelect1">Andar Selecionado:</label>
     <select class="form-control" id="exampleFormControlSelect1">
       <option>1</option>
@@ -81,6 +80,108 @@
       <option>Box 69194</option>
       <option>Box 51194</option>
     </select>
+  </div><br>
+
+  <div class="form-group">
+      <label for="exampleFormControlSelect1">Horários de funcionamento: </label><br>
+      
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Segunda de:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+        </div>
+      </div><br>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Terça de:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+        </div>
+      </div><br>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Quarta de:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+        </div>
+      </div><br>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Quinta de:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+        </div>
+      </div><br>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Sexta de:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+        </div>
+      </div><br>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Sábado de:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="22:45:00" id="ajuste5">
+        </div>
+      </div><br>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Domingo de:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="10:00:00" id="ajuste5">
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="exampleFormControlSelect1" id="ajuste6" class="col-2 col-form-label">Até:</label>
+        <div class="col-10">
+          <input class="form-control" type="time" value="17:45:00" id="ajuste5">
+        </div>
+      </div><br>
   </div>
 
   <input class="btn btn-primary" type="submit" value="Salvar Alterações" id="saidae">
