--- a/WebAdmin/public/Locais.html
+++ b/WebAdmin/public/Locais.html
@@ -47,7 +47,7 @@
 
 <form class="form-inline my-2 my-lg-0" id="saidae5">
       <input id="txtSearch" class="form-control mr-sm-2" id="barra" type="search" placeholder="Pesquise por locais" aria-label="Search">
-      <strong><input type="checkbox" id="btnByType" checked style="color: white;"> Fitrar por tipo</input></strong>
+      <strong><p style="color: white;">Busca por tipo:</p></strong>
       <div class="form-group" id="ajuste2">
         <select id="cmbLocalType" class="form-control my-2 my-lg-0" id="ajuste3">
        </select>
