Availability filter added on local search; and other changes

--- a/WebAdmin/public/Locais.html
+++ b/WebAdmin/public/Locais.html
@@ -51,7 +51,9 @@
       <div class="form-group" id="ajuste2">
         <select id="cmbLocalType" class="form-control my-2 my-lg-0" id="ajuste3">
        </select>
-    </div>
+       <input id="btnShowOnlyTheAvailable" type="checkbox"><strong><p style="color: white;">Mostrar apenas locais ativos</p></strong></input>
+       <input id="btnShowOnlyTheUnavailable" type="checkbox"><strong><p style="color: white;">Mostrar apenas locais desativos</p></strong></input>
+      </div>
     </form>
 
 <div id="locals" class="list-group" id="saidae5">
