--- a/WebAdmin/public/Perfil.html
+++ b/WebAdmin/public/Perfil.html
@@ -43,38 +43,27 @@
 <hr>
 
 <div id="branco">
- <div class="form-group">
-    <label for="exampleFormControlSelect1">Nome de Usuário: </label>
-    <input type="text" class="form-control" id="exampleFormControlSelect1" disabled="true" placeholder="Adagoberto dos Santos">
-    </select>
-  </div>
 
- <div class="form-group">
-    <label for="exampleFormControlSelect1">Senha Atual: </label>
-    <input type="password" class="form-control" id="exampleFormControlSelect1">
-    </select>
-  </div>
-
- <div class="form-group">
-    <label for="exampleFormControlSelect1">Nova Senha: </label>
-    <input type="password" class="form-control" id="exampleFormControlSelect1">
-    </select>
-  </div>
-
-   <div class="form-group">
-    <label for="exampleFormControlSelect1">Confirmar Senha: </label>
-    <input type="password" class="form-control" id="exampleFormControlSelect1">
-    </select>
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Alterar seu nome</label>
+    <input id="txtAdminName" type="text" class="form-control" id="exampleFormControlSelect1" required/>
+    <label for="exampleFormControlSelect1">Alterar sua senha</label>
+    <input id="txtAdminPassword" type="password" class="form-control" id="exampleFormControlSelect1" required/>
   </div>
 
 <br>
 
-  <input class="btn btn-primary" type="submit" value="Salvar Alterações" id="saidae">
+   <input id="btnUpdateAdmin" class="btn btn-primary" type="submit" value="Salvar alterações" id="saidae">
 
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="../src/Scripts/editAdmin.js"></script>
+<script src="../src/Controllers/UserController.js"></script>
+<script src="../src/Models/User.js"></script>
+<script src="../src/Services/ApiConfig.js"></script>
+<script src="../src/Services/ApiConnection.js"></script>
 
 </body>
 </html>
