Get local admins bug fixed; working on shopkeepers search by local

--- a/WebAdmin/public/Lojistas.html
+++ b/WebAdmin/public/Lojistas.html
@@ -47,8 +47,7 @@
 
 <form class="form-inline my-2 my-lg-0" id="saidae5">
       <input id="txtSearch" class="form-control mr-sm-2" id="barra" type="search" placeholder="Pesquisar" aria-label="Search">
-      <input id="btnByLocal" type="checkbox"><strong><p style="color: white;">Por loja</p></strong></input>
-      <input id="btnByShopkeeper" type="checkbox"><strong><p style="color: white;">Por lojista</p></strong></input>
+      <input id="btnByLocal" type="checkbox"><strong><p style="color: white;">Busca por loja</p></strong></input>
     </form>
 
 <div id="shopkeepers" class="list-group" id="saidae5">
@@ -59,6 +58,7 @@
 <script src="../src/Scripts/fetchShopkeepers.js"></script>
 <script src="../src/Controllers/AccountController.js"></script>
 <script src="../src/Controllers/LocalController.js"></script>
+<script src="../src/Controllers/UserController.js"></script>
 <script src="../src/Services/ApiConfig.js"></script>
 <script src="../src/Services/ApiConnection.js"></script>
 
