Visual improvement on editLocal page

--- a/WebAdmin/public/EditarLocais.html
+++ b/WebAdmin/public/EditarLocais.html
@@ -42,6 +42,9 @@
 <h6>Easter egg do ReachUp <3</h6>
 <hr>
 <div id="branco">
+  <div id="localEdition">
+</div>
+  
 
 <div class="form-group">
     <label for="exampleFormControlSelect1">Nome Local: </label>
