Working on feedbacks ordination

--- a/WebAdmin/public/Feedback.html
+++ b/WebAdmin/public/Feedback.html
@@ -48,7 +48,8 @@
 
 <form class="form-inline my-2 my-lg-0" id="saidae5">
       <input id="txtClientEmail" class="form-control mr-sm-2" id="barra" type="search" placeholder="Pesquisar por usuários" aria-label="Search">
-      <button id="btnSearchByUser" type="button" id="btnResponsa" class="btn btn-primary">Pesquisar</button>
+      <input id="btnNewestFirst" type="checkbox"><strong><p style="color: white;">Mais recentes primeiro</p></strong></input>
+      <input id="btnOldestFirst" type="checkbox"><strong><p style="color: white;">Mais antigos primeiro</p></strong></input>
       <div class="form-group" id="ajuste2">
           <select id="cmbFeedbackType" class="form-control my-2 my-lg-0" id="ajuste3">
          </select>
@@ -64,8 +65,8 @@
 <script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
 <script src="../src/Scripts/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script src="../src/Scripts/feedbacks.js"></script>
 <script src="../src/Scripts/feedbackType.js"></script>
+<script src="../src/Scripts/feedbacks.js"></script>
 <script src="../src/Controllers/FeedbackController.js"></script>
 <script src="../src/Controllers/FeedbackTypeController.js"></script>
 <script src="../src/Models/Feedback.js"></script>
